# AlgoSplit

./: README.md  README_SETUP.md
algosplit_frontend/: package-lock.json  package.json
algosplit_frontend/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
algosplit_frontend/app/api/auth/login/: route.ts
algosplit_frontend/app/api/auth/signup/: route.ts
algosplit_frontend/app/api/contacts/: route.ts
algosplit_frontend/app/api/contacts/[id]/: route.ts
algosplit_frontend/app/dashboard/: layout.tsx  page.tsx
algosplit_frontend/app/dashboard/analytics/: layout.tsx  page.tsx
algosplit_frontend/app/dashboard/contacts/: layout.tsx  page.tsx
algosplit_frontend/app/dashboard/create-bill/: layout.tsx  page.tsx
algosplit_frontend/app/login/: layout.tsx  page.tsx
algosplit_frontend/app/signup/: layout.tsx  page.tsx
algosplit_frontend/components/: Navbar.tsx
algosplit_frontend/contexts/: AuthContext.tsx  WalletContext.tsx
algosplit_frontend/lib/: algorand.ts  contract.ts  mongodb.ts
algosplit_frontend/models/: Contact.ts  User.ts
algosplit_frontend/public/: manifest.json  robots.txt
contract/: README.md  algosplit.code-workspace
contract/projects/algosplit/: .algokit.toml  README.md  pyproject.toml
contract/projects/algosplit/.algokit/: .copier-answers.yml
contract/projects/algosplit/smart_contracts/algosplit/: contract.py  deploy_config.py
contract/projects/algosplit/smart_contracts/artifacts/algosplit/: Algosplit.approval.puya.map  Algosplit.approval.teal  Algosplit.arc56.json  algosplit_client.py
(+2 files in other folders)
