[tool.poetry]
name = "algosplit"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["Vijay Guttula <vijayguttula001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
pyteal = "*"

[tool.poetry.group.dev.dependencies]
# keep empty or minimal for now

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
